# Feza

./: .editorconfig  .gitignore  README.md  create_python_binaries.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: auto-tag.yml  ci.yml  release.yml
feza/: main.py
feza/templates/: formula.rb.j2  release_notes.md.j2
mcp/: README.md  package-lock.json  package.json  server.ts  setup.ps1  tsconfig.json
