[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["feza"]

[project]
name = "feza"
version = "0.5.17"
description = "CLI tool to plan, build, publish, and tap releases for CLI apps"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.0.0",
]

[project.scripts]
feza = "feza.main:main"

[tool.setuptools.package-data]
feza = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''